--- a/app/Slick слайдеры/1) Несколько слайдов - классика/slick-slider1.html
+++ b/app/Slick слайдеры/1) Несколько слайдов - классика/slick-slider1.html
@@ -1,33 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Название сайта</title>
 	<link rel="icon" href="https://example.com/favicon.ico" type="image/x-icon">
-	<!-- Styles -->
-	<!-- build:css -->
-	<!-- Все стили помещаются внтурь комментария build -->
-	<!-- Slick slider CSS -->
-	<link rel="stylesheet" href="libs/slick-slider/slick.css">
-	<!-- Fontawesome -->
-	<link rel="stylesheet" href="css/font-awesome.min.css">
-	<!-- Magnific Popup CSS -->
-	<link rel="stylesheet" href="libs/magnific-popup/magnific-popup.css">
-	<!-- Google Fonts roboto -->
-	<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i,900|Rubik:500,700,900&subset=latin,cyrillic" rel="stylesheet">
-	<!-- Базовые стили CSS -->
-	<link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" href="css/slider1.css">
-	<!-- endbuild -->
 </head>
 
 
+
+
+<!-- Что подключить -->
+<script src="scroll-lock.min.js"></script>
+<script src="fixedmenu1.js"></script>
 <body>
-	
-
-
 	<section>
 		<div class="container">
 			<div class="slider">
