модальное окно сделано

--- a/app/3) Модальное окно/modal.html
+++ b/app/3) Модальное окно/modal.html
@@ -16,8 +16,11 @@
 
 
 <!-- Что подключить -->
-<link rel="stylesheet" href="graph-modal.min.css">
-<script src="graph-modal.min.js"></script>
+<link rel="stylesheet" href="libs/graph-modal.min.css">
+<script src="libs/scroll-lock.min.js"></script>
+<script src="libs/graph-modal.min.js"></script>
+
+<script src="modal.js"></script>
 <!-- Компонент -->
 <body>
     <button class="btn-reset modal-btn modal-1" data-graph-path="first" data-graph-animation="fadeInUp" data-graph-speed="500">
