--- a/app/5) Slick слайдеры/1) Несколько слайдов - классика/slick-slider1.html
+++ b/app/5) Slick слайдеры/1) Несколько слайдов - классика/slick-slider1.html
@@ -4,15 +4,19 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Название сайта</title>
-	<link rel="icon" href="https://example.com/favicon.ico" type="image/x-icon">
+	
 </head>
 
 
 
 
 <!-- Что подключить -->
-<script src="scroll-lock.min.js"></script>
-<script src="fixedmenu1.js"></script>
+<script src="libs/jquery-3.3.1.min.js"></script>
+<link rel="stylesheet" href="libs/slick.css">
+<script src="libs/slick.min.js"></script>
+<script src="slider1.js"></script>
+
+<!-- Компонент -->
 <body>
 	<section>
 		<div class="container">
@@ -57,19 +61,42 @@
 
 
 
-	<!-- build:js -->
-	<!-- jQuery -->
-	<script src="js/jquery-3.3.1.min.js"></script>
-	<!-- fa -->
-	<script src="https://kit.fontawesome.com/9d2ac34ab6.js" crossorigin="anonymous"></script>
-	<!-- Slick slider JS -->
-	<script src="libs/slick-slider/slick.min.js"></script>
-	<!-- Magnific Popup JS -->
-	<script src="libs/magnific-popup/jquery.magnific-popup.min.js"></script>
-	<!-- Базовые скрипты javascript -->
-	<!-- <script src="js/main.js"></script> -->
-	<script src="js/slider1.js"></script>
-	<!-- endbuild -->
+<style>
+.slider {
+  position: relative;
+}
+
+.slick-arrow {
+  position: absolute;
+  height: 100%;
+  top: 0;
+  z-index: 10;
+  display: flex;
+  align-items: center;
+}
+
+.slick-arrow svg {
+  width: 30px;
+  height: 50px;
+}
+
+.slick-arrow svg:hover {
+  fill: orange;
+}
+
+.slick-prev {
+  left: -80px;
+}
+
+.slick-next {
+  right: -80px;
+}
+
+.slider__item {
+  width: 380px;
+  margin: 0 10px;
+}
+</style>
 </body>
 
 </html>
