--- a/app/6) Swiper слайдеры/1) несколько слайдов - классика/swiper-slider1.html
+++ b/app/6) Swiper слайдеры/1) несколько слайдов - классика/swiper-slider1.html
@@ -17,20 +17,22 @@
 
 <!-- Компонент -->
 <body>
-	<!-- Slider main container -->
-	<div class="swiper">
-		<div class="swiper-wrapper">
-			<div class="swiper-slide">Slide 1</div>
-			<div class="swiper-slide">Slide 2</div>
-			<div class="swiper-slide">Slide 3</div>
+	<div class="example-slider swiper">
+		<div class="example-slider__wrapper swiper-wrapper">
+			<div class="example-slider__slide swiper-slide">Slide 1</div>
+			<div class="example-slider__slide swiper-slide">Slide 2</div>
+			<div class="example-slider__slide swiper-slide">Slide 3</div>
 		</div>
-		<div class="swiper-pagination"></div>
-	
-		<div class="swiper-button-prev"></div>
-		<div class="swiper-button-next"></div>
-	
-		<div class="swiper-scrollbar"></div>
+
+		<div class="example-slider__prev">
+			left
+		</div>
+		<div class="example-slider__next">
+			right
+		</div>
 	</div>
+
+
 
 
 
